fixed bugs in FF

--- a/docs/style.css
+++ b/docs/style.css
@@ -691,6 +691,8 @@
     display: flex;
     padding-left: 273px;
     margin-bottom: -15px; }
+    .scroll-section > .cards > .card-home:not(:last-child) {
+      z-index: 10; }
     .scroll-section > .cards .card-home {
       display: flex;
       align-items: center;
@@ -728,10 +730,10 @@
       line-height: 1.4; }
       .scroll-section > .cards .borvo .svg-container {
         transform-origin: 49% 58.5%;
-        z-index: 999; }
+        z-index: 5; }
         .scroll-section > .cards .borvo .svg-container svg {
           fill: #0d0f1c;
-          outline: calc(100vh - 420px) solid #0d0f1c; }
+          outline: 100vh solid #0d0f1c; }
       .scroll-section > .cards .borvo .neural {
         position: absolute;
         top: 0;
