--- a/src/styles/scroll-section.scss
+++ b/src/styles/scroll-section.scss
@@ -9,7 +9,8 @@
     margin-bottom: -15px;
     // padding-right: calc(50vw - 600px);
 
-    & > div:last-child {
+    & > .card-home:not(:last-child){
+      z-index: 10;
     }
 
     .card-home {
@@ -59,10 +60,10 @@
       line-height: 1.4;
       .svg-container {
         transform-origin: 49% 58.5%;
-        z-index: 999;
+        z-index: 5;
         svg {
           fill: #0d0f1c;
-          outline: calc(100vh - 420px) solid #0d0f1c;
+          outline: 100vh solid #0d0f1c;
         }
       }
       .neural {
