--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,3 +13,9 @@
 .show{
     display: flex !important;
 }
+.scroll-hidden {
+    overflow: hidden;
+  }
+.scroll-x-hidden{
+    overflow-x: hidden !important; 
+}
