--- a/fonts/stylesheet.css
+++ b/fonts/stylesheet.css
@@ -71,7 +71,7 @@
 		url('ProximaNova-Regular.eot?#iefix') format('embedded-opentype'),
 		url('ProximaNova-Regular.woff') format('woff'),
 		url('ProximaNova-Regular.ttf') format('truetype');
-	font-weight: normal;
+	font-weight: 100;
 	font-style: normal;
 }
 
